<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/checklist_data_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_teal"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingStart="@dimen/form_left_indent"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:elevation="@dimen/elevation_high">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="16sp"
                android:textColor="@color/light_material_teal"
                />
            <EditText
                android:id="@+id/checklist_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_checklist"
                android:textSize="36sp"
                android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingBottom="@dimen/activity_vertical_margin">
            <EditText
                android:id="@+id/checklist_description_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="18sp"
                android:textColor="@color/light_material_teal"
                android:singleLine="true"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:elevation="@dimen/elevation_low">
        <LinearLayout
            android:id="@+id/color_setting"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/white"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="@dimen/form_left_indent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_color_lens_grey600_48dp"/>
                    </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:text="@string/color"
                        android:layout_weight="1"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/color_desc"
                        android:textColor="@color/text_gray"
                        android:gravity="center_vertical"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/text_gray"
                android:layout_weight="99">

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/white"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/alarms_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="@dimen/form_left_indent"
                        android:layout_height="match_parent"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_alarm_grey600_48dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:text="@string/alarms"
                            android:layout_weight="1"
                            android:gravity="center_vertical"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/alarms_desc_no"
                            android:textColor="@color/text_gray"
                            android:gravity="center_vertical"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/text_gray"
                android:layout_weight="99">

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:background="@android:color/white"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:id="@+id/list_display_setting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="@dimen/form_left_indent"
                            android:layout_height="match_parent"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_view_headline_grey600_48dp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingBottom="@dimen/activity_vertical_margin"
                            android:paddingTop="@dimen/activity_vertical_margin"
                            android:paddingRight="@dimen/activity_horizontal_margin"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="16sp"
                                android:text="@string/listing_mode"
                                android:layout_weight="1"
                                android:gravity="center_vertical"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/listing_mode_desc_list"
                                android:textColor="@color/text_gray"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>